tests/react_hocs/react_hocs.exp
Error ----------------------------------------------------------------------------------------------------- Bad.js:13:11

Cannot use operator `*` with operands string [1] and number [2] [unsafe-arithmetic]

   Bad.js:13:11
   13|     buz: (buz * 2).toString(), // Error: string ~> number
                 ^^^^^^^

References:
   Bad.js:12:29
   12|   mapProps(({ buz }: { buz: string }) => ({ // Error: Missing foo
                                   ^^^^^^ [1]
   Bad.js:13:17
   13|     buz: (buz * 2).toString(), // Error: string ~> number
                       ^ [2]


Error ------------------------------------------------------------------------------------------------------ Bad.js:18:3

Cannot call `compose(...)` with `Bad` bound to the first parameter because property `foo` is missing in props [1] but
exists in `Props` [2]. [prop-missing]

   Bad.js:18:3
   18| )(Bad): React.ComponentType<any>);
         ^^^

References:
   hocs.js:13:25
                               v-
   13| ): (React.ComponentType<{|
   14|   ...Props,
   15|   ...ExtraProps,
   16| |}>) => React.ComponentType<Props> {
       -^ [1]
   Bad.js:9:21
    9| const Bad = (props: Props) => null;
                           ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ Bad.js:18:3

Cannot call `compose(...)` with `Bad` bound to the first parameter because string [1] is incompatible with number [2] in
property `bar`. [incompatible-call]

   Bad.js:18:3
   18| )(Bad): React.ComponentType<any>);
         ^^^

References:
   Bad.js:15:31
   15|   withProps(({ buz }: {| buz: string |}) => ({
                                     ^^^^^^ [1]
   Bad.js:6:8
    6|   bar: number,
              ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- Good_use.js:5:2

Cannot create `Good` element because property `qux` is missing in props [1] but exists in object type [2].
[prop-missing]

   Good_use.js:5:2
    5| <Good foo={1} buz={2} />; // Error: Missing qux
        ^^^^

References:
   Good_use.js:5:1
    5| <Good foo={1} buz={2} />; // Error: Missing qux
       ^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   Good.js:21:30
   21| )(Good): React.ComponentType<{|foo: number, buz: number, qux: number|}>);
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- Good_use.js:6:2

Cannot create `Good` element because property `buz` is missing in props [1] but exists in object type [2].
[prop-missing]

   Good_use.js:6:2
    6| <Good foo={1} qux={3} />; // Error: Missing buz
        ^^^^

References:
   Good_use.js:6:1
    6| <Good foo={1} qux={3} />; // Error: Missing buz
       ^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   Good.js:21:30
   21| )(Good): React.ComponentType<{|foo: number, buz: number, qux: number|}>);
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- Good_use.js:7:2

Cannot create `Good` element because property `foo` is missing in props [1] but exists in object type [2].
[prop-missing]

   Good_use.js:7:2
    7| <Good buz={2} qux={3} />; // Error: Missing foo
        ^^^^

References:
   Good_use.js:7:1
    7| <Good buz={2} qux={3} />; // Error: Missing foo
       ^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   Good.js:21:30
   21| )(Good): React.ComponentType<{|foo: number, buz: number, qux: number|}>);
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Good_use.js:8:19

Cannot create `Good` element because string [1] is incompatible with number [2] in property `buz`. [incompatible-type]

   Good_use.js:8:19
    8| <Good foo={1} buz="nope" qux={3} />; // Error: Cannot multiply string
                         ^^^^^^ [1]

References:
   Good.js:21:50
   21| )(Good): React.ComponentType<{|foo: number, buz: number, qux: number|}>);
                                                        ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Good_use.js:9:27

Cannot create `Good` element because string [1] is incompatible with number [2] in property `qux`. [incompatible-type]

   Good_use.js:9:27
    9| <Good foo={1} buz={2} qux="nope" />; // Error: string ~> number
                                 ^^^^^^ [1]

References:
   Good.js:21:63
   21| )(Good): React.ComponentType<{|foo: number, buz: number, qux: number|}>);
                                                                     ^^^^^^ [2]



Found 8 errors
